speaker details update

--- a/speaker-details.html
+++ b/speaker-details.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>TheEvent - Bootstrap Event Template</title>
+  <title>Polkadot Savannah</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -75,7 +75,7 @@
       <div class="container">
         <div class="section-header">
           <h2>Speaker Details</h2>
-          <p>Praesentium ut qui possimus sapiente nulla.</p>
+          <p>Respective Speaker for Polkadot Savannah 2024 will be update here soon!!.</p>
         </div>
 
         <div class="row">
@@ -85,7 +85,7 @@
 
           <div class="col-md-6">
             <div class="details">
-              <h2>Brenden Legros</h2>
+              <h2>Malik el bay</h2>
               <div class="social">
                 <a href=""><i class="fa fa-twitter"></i></a>
                 <a href=""><i class="fa fa-facebook"></i></a>
@@ -117,7 +117,7 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-info">
-            <img src="img/logo.png" alt="TheEvenet">
+            <img src="img/logo1.png" alt="TheEvenet">
             <p>In alias aperiam. Placeat tempore facere. Officiis voluptate ipsam vel eveniet est dolor et totam porro. Perspiciatis ad omnis fugit molestiae recusandae possimus. Aut consectetur id quis. In inventore consequatur ad voluptate cupiditate debitis accusamus repellat cumque.</p>
           </div>
 
@@ -146,9 +146,9 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h4>Contact Us</h4>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br>
+              KE,UG,NG,ETH,TZ,ZAM <br>
+              The Savannah<br>
+              Africa Continent <br>
               <strong>Phone:</strong> +1 5589 55488 55<br>
               <strong>Email:</strong> info@example.com<br>
             </p>
@@ -169,7 +169,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong>TheEvent</strong>. All Rights Reserved
+        &copy; Copyright <strong>Polkadot Savannah</strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!--
@@ -178,7 +178,7 @@
           Licensing information: https://bootstrapmade.com/license/
           Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=TheEvent
         -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed with <a href="https://bootstrapmade.com/">Love from Savannah Africa</a>
       </div>
     </div>
   </footer><!-- #footer -->
