--- a/index.html
+++ b/index.html
@@ -106,6 +106,16 @@
       </div>
     </section>
 
+        <!-- Popup Modal -->
+<div id="popupModal" class="modal">
+  <div class="modal-content">
+    <span class="close" onclick="closeModal()">&times;</span>
+    <h2>Register for Campus Mixers!</h2>
+    <p>Sign up to get access and join The Education Programme  and updates on Polkadot Savannah .</p>
+    <a href="https://purple-marble-a04.notion.site/Campus-Mixers-8d67bafc61ec48378654135ac8a04c3a">Register Now</a>
+  </div>
+</div>
+
     <!--==========================
       Speakers Section
     ============================-->
