--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
         <ul class="nav nav-tabs" role="tablist">
           <li class="nav-item">
-            <a class="nav-link active" href="#day-1" role="tab" data-toggle="tab">February</a>
+            <a class="nav-link active" href="#day-1" role="tab" data-toggle="tab">February Onwards</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#day-2" role="tab" data-toggle="tab">March - May</a>
@@ -288,7 +288,7 @@
           <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-1">
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>00:00 </time></div>
+              <div class="col-md-2"><time>February Onwards </time></div>
               <div class="col-md-10">
                 <h4>Registration</h4>
                 <p>Registration for campus Mixers is Open.</p>
@@ -372,22 +372,22 @@
           <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-2">
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>00:00 AM</time></div>
+              <div class="col-md-2"><time>Ongoing Workshop and Bootcamp </time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="img/speakers/DOTSafari.png" alt="Brenden Legros">
                 </div>
                 <h4>Bootcamp and Hackathon. <span>Polkadot Savannah Team</span></h4>
-                <p>Rest of the information will be communicated.</p>
+                <p>DevCalls</p>
               </div>
             </div>
 
             <!-- Schedule Item 1 -->
-<!-- <div class="row schedule-item">
-    <div class="col-md-2"><time>10:00 AM</time></div>
+<!--- <div class="row schedule-item">
+    <div class="col-md-2"><time>June 6th - 7th</time></div>
     <div class="col-md-10">
         <div class="speaker">
-            <img src="img/speakers/1.jpg" alt="Brenden Legros">
+            <img src="img/speakers/pinky.png" alt="Brenden Legros">
         </div>
         <h4>Keynote <span>Brenden Legros</span></h4>
         <p>Facere provident incidunt quos voluptas.</p>
@@ -459,51 +459,51 @@
           <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-3">
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>00:00 AM</time></div>
+              <div class="col-md-2"><time>June 3rd - 5th</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="img/speakers/pinky.png" alt="Hubert Hirthe">
                 </div>
-                <h4>Event/Confrence <span>Polkadot Ecosystem</span></h4>
-                <p>Hackathon will complete at this time.</p>
+                <h4>Ongoing <span>Polkadot Savannah Challenges</span></h4>
+                <p>In-Person Hackathon</p>
               </div>
             </div>
 
             <!-- Schedule Item 1 -->
-<!-- <div class="row schedule-item">
-    <div class="col-md-2"><time>11:00 AM</time></div>
+ <div class="row schedule-item">
+    <div class="col-md-2"><time>June 6th - 7th</time></div>
     <div class="col-md-10">
         <div class="speaker">
-            <img src="img/speakers/3.jpg" alt="Cole Emmerich">
+            <img src="img/speakers/pinky.png" alt="Cole Emmerich">
         </div>
-        <h4>Explicabo et rerum quis et ut ea. <span>Cole Emmerich</span></h4>
-        <p>Veniam accusantium laborum nihil eos eaque accusantium aspernatur.</p>
+        <h4>Conference </h4>
+        <p>2 Day Conference</p>
     </div>
-</div> -->
+</div> 
 
 <!-- Schedule Item 2 -->
-<!-- <div class="row schedule-item">
-    <div class="col-md-2"><time>12:00 AM</time></div>
+ <div class="row schedule-item">
+    <div class="col-md-2"><time>June 8th</time></div>
     <div class="col-md-10">
         <div class="speaker">
-            <img src="img/speakers/1.jpg" alt="Brenden Legros">
+            <img src="img/speakers/pinky.png" alt="Brenden Legros">
         </div>
-        <h4>Libero corrupti explicabo itaque. <span>Brenden Legros</span></h4>
-        <p>Facere provident incidunt quos voluptas.</p>
+        <h4>UnConfrence</h4>
+        <p>Tentativley</p>
     </div>
-</div> -->
+</div> 
 
 <!-- Schedule Item 3 -->
-<!-- <div class="row schedule-item">
-    <div class="col-md-2"><time>02:00 PM</time></div>
+<div class="row schedule-item">
+    <div class="col-md-2"><time>June 8th</time></div>
     <div class="col-md-10">
         <div class="speaker">
-            <img src="img/speakers/4.jpg" alt="Jack Christiansen">
+            <img src="img/speakers/pinky.png" alt="Jack Christiansen">
         </div>
-        <h4>Qui non qui vel amet culpa sequi. <span>Jack Christiansen</span></h4>
-        <p>Nam ex distinctio voluptatem doloremque suscipit iusto.</p>
+        <h4>Closing <span>Party</span></h4>
+        <p>Till dawn</p>
     </div>
-</div> -->
+</div> 
 
 <!-- Schedule Item 4 -->
 <!-- <div class="row schedule-item">
