--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
 
       <div class="container">
         <div class="section-header">
-          <h2>Sponsors</h2>
+          <h2>2023 Patners</h2>
         </div>
 
         <div class="row no-gutters supporters-wrap clearfix">
@@ -728,6 +728,25 @@
           <div class="col-lg-3 col-md-4 col-xs-6">
             <div class="supporter-logo">
               <img src="img/supporters/kusama.png" class="img-fluid" alt="">
+            </div>
+          </div>
+
+
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <div class="supporter-logo">
+              <img src="img/supporters/Nova-Wallet-Logo-Update.png" class="img-fluid" alt="">
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <div class="supporter-logo">
+              <img src="img/supporters/encointer.jpg" class="img-fluid" alt="">
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <div class="supporter-logo">
+              <img src="img/supporters/zeitget.png" class="img-fluid" alt="">
             </div>
           </div>
         
