--- a/index.html
+++ b/index.html
@@ -774,6 +774,18 @@
               <img src="img/supporters/sora.png" class="img-fluid" alt="">
             </div>
           </div>
+
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <div class="supporter-logo">
+              <img src="img/supporters/Subwallet-Logo.png" class="img-fluid" alt="">
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <div class="supporter-logo">
+              <img src="img/supporters/poly.jpg" class="img-fluid" alt="">
+            </div>
+          </div>
         
         </div>
 
