--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <li><a href="#speakers">Speakers</a></li>
           <li><a href="#schedule">Schedule</a></li>
           <li><a href="#venue">Venue</a></li>
-          <li><a href="speaker-details.html"> Recent Event</li>
+          <li><a href="recents.html"> Recent Event</li>
           <li><a href="#hotels">Hotels</a></li>
           <li><a href="#gallery">Gallery</a></li>
           <li><a href="#supporters">Sponsors</a></li>
