--- a/Aiweb3savannahspearkers.html
+++ b/Aiweb3savannahspearkers.html
@@ -51,9 +51,9 @@
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li class="menu-active"><a href="#intro">Home</a></li>
+          <li>><a href="index.html#intro">Home</a></li>
           <li><a href="index.html#about">About</a></li>
-          <li><a href="index.html#speakers">Speakers</a></li>
+          <li class="menu-active"><a href="Aiweb3savannahspearkers.html">Speakers</a></li>
           <li><a href="index.html#schedule">Schedule</a></li>
           <li><a href="index.html#venue">Venue</a></li>
           <li><a href="index.html#hotels">Hotels</a></li>
