--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <ul class="nav-menu">
           <li class="menu-active"><a href="#intro">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="Aiweb3savannahspearkers.html"> Recent Event</li>
+          <li><a href="Aiweb3savannahspearkers.html"> Speakers</li>
           <li><a href="#schedule">Schedule</a></li>
           <li><a href="#venue">Venue</a></li>
           <li><a href="recents.html"> Recent Event</li>
