--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="intro-container wow fadeIn">
       <h1 class="mb-4 pb-0"><br><span>Polkadot</span> Savannah</h1>
       <p class="mb-4 pb-0">2024 in Africa Savannah</p>
-      <a href="https://youtu.be/KRP2P_hv7Mk" class="venobox play-btn mb-4" data-vbtype="video"
+      <a href="https://youtube.com/shorts/s1fLnI-EmJE?feature=share" class="venobox play-btn mb-4" data-vbtype="video"
         data-autoplay="true"></a>
       <a href="#about" class="about-btn scrollto">About The Event</a>
     </div>
